# Dog-Breed-Explorer

./: .gitignore  LICENSE  README.md  copy_of_GCP_run.py  dbt_project.yml  main.py  main_new.py  poetry.toml  pyproject.toml  test.py  ttt.ipynb
.dbt/: .user.yml  profiles.yml
.github/workflows/: dbt_prod_build.yml  python-app.yml
models/mart_models/: dim_breed.sql  fact_family_friendly_temperaments.sql  fact_weight_life_span.sql  mart_models_schema.yml
models/staging_models/: staging_models.yml  staging_models_schema.yml  type_cast_age.sql  type_cast_height.sql  type_cast_height_and_weight.sql  type_cast_weight.sql
tests/: assert_row_count.sql  schema.yml
