[tool.poetry]
name = "dog-breed-explorer"
version = "0.1.0"
description = "Pyne Dog Breed Explorer case"
authors = ["Frederik Møller Sørensen <frederik.moller2@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "../Dog-Breed-Explorer" }
]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
requests = "^2.32.3"
google-auth = "^2.39.0"
google-cloud-storage = "2.9.0"
ndjson = "^0.3.1"
datetime = "^5.5"
google-cloud-bigquery-datatransfer = "^3.19.1"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
dbt = "^1.0.0.40.0"
dbt-core = "^1.9.4"
dbt-bigquery = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
